--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "bootstrap": "^4.2.1",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
     "react": "^16.7.0",
+    "react-bootstrap-toggle": "^2.3.1",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
+    "react-toggle": "^4.0.2",
     "redux": "^4.0.1"
   },
   "scripts": {
